--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -1,7 +1,39 @@
 doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+head
+  title Gamer Head
+  script(src='/javascripts/jquery.min.js')
+  script(src='/javascripts/bootstrap.min.js')
+  link(rel='stylesheet' href='/stylesheets/bootstrap.min.css')
+  link(rel='stylesheet' href='/stylesheets/font-awesome.min.css')
+  link(rel='stylesheet' href='/stylesheets/bootstrap.css')
+  
+  nav.navbar.navbar-expand-lg.bg-dark(data-bs-theme='dark')
+    .container-fluid
+      H1 Game Head
+      button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarColor02' aria-controls='navbarColor02' aria-expanded='false' aria-label='Toggle navigation')
+        span.navbar-toggler-icon
+      #navbarColor02.collapse.navbar-collapse
+        ul.navbar-nav.me-auto
+          li.nav-item
+            a.nav-link.active(href='#')
+              | Home
+              span.visually-hidden (current)
+          li.nav-item
+            a.nav-link(href='#') Features
+          li.nav-item
+            a.nav-link(href='#') Pricing
+          li.nav-item
+            a.nav-link(href='#') About
+          li.nav-item.dropdown
+            form.d-flex
+              input.form-control.me-sm-2(type='search' placeholder='Search')
+              button.btn.btn-secondary.my-2.my-sm-0(type='submit') Search
+        ul.d-flex.navbar-nav
+          li.nav-item
+            a.nav-link(href='#') Sign in
+          li.nav-item
+            a.nav-link(href='#') Sign up
+            
   body
     block content
+    
