walking in circles

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -30,7 +30,7 @@ head
               button.btn.btn-secondary.my-2.my-sm-0(type='submit') Search
         ul.d-flex.navbar-nav
           li.nav-item
-            a.nav-link(href='#') Sign in
+            a.nav-link(href='/SignIn') Sign in
           li.nav-item
             a.nav-link(href='#') Sign up
             
