--- a/app_server/views/SignIn.pug
+++ b/app_server/views/SignIn.pug
@@ -1,17 +1,16 @@
-extend layout
+extends Head
 block content
-    form
-        fieldset
-            legend Legend
-            .row
-            label.col-sm-2.col-form-label(for='staticEmail') Email
-            .col-sm-10
-                input#staticEmail.form-control-plaintext(type='text' readonly='' value='email@example.com')
-            div
-            label.form-label.mt-4(for='exampleInputEmail1') Email address
-            input#exampleInputEmail1.form-control(type='email' aria-describedby='emailHelp' placeholder='Enter email')
-            small#emailHelp.form-text.text-muted We&apos;ll never share your email with anyone else.
-            div
-            label.form-label.mt-4(for='exampleInputPassword1') Password
-            input#exampleInputPassword1.form-control(type='password' placeholder='Password' autocomplete='off')
-            button.btn.btn-primary(type='submit') Submit  
+    .d-flex.justtify-content-center.align-items-center
+        .container.bg-secondary
+            form
+                fieldset
+                    legend Sign Up
+                    .row
+                    div
+                        label.form-label.mt-4(for='exampleInputEmail1') Email address
+                        input#exampleInputEmail1.form-control(type='input' aria-describedby='Username' placeholder='Enter Username')
+                    div
+                        label.form-label.mt-4(for='exampleInputPassword1') Password
+                        input#exampleInputPassword1.form-control(type='password' placeholder='Password' autocomplete='off')
+                    .d-flex.justify-content-center
+                        button.btn.btn-primary(type='submit') Sign Up  
