--- a/app_server/views/SignUp.pug
+++ b/app_server/views/SignUp.pug
@@ -1,1 +1,20 @@
-extends layout
+extend Head
+block content
+    .d-flex.justtify-content-center.align-items-center
+        .container.bg-secondary
+            form
+                fieldset
+                    legend Sign Up
+                    .row
+                    div
+                        label.form-label.mt-4(for='exampleInputEmail1') Email address
+                        input#exampleInputEmail1.form-control(type='input' aria-describedby='Username' placeholder='Enter Username')
+                    div
+                        label.form-label.mt-4(for='exampleInputEmail1') Email address
+                        input#exampleInputEmail1.form-control(type='email' aria-describedby='emailHelp' placeholder='Enter email')
+                        small#emailHelp.form-text.text-muted We'll never share your email with anyone else.
+                    div
+                        label.form-label.mt-4(for='exampleInputPassword1') Password
+                        input#exampleInputPassword1.form-control(type='password' placeholder='Password' autocomplete='off')
+                    .d-flex.justify-content-center
+                        button.btn.btn-primary(type='submit') Sign Up
