--- a/app_server/views/SignIn.pug
+++ b/app_server/views/SignIn.pug
@@ -7,10 +7,10 @@ block content
                     legend Sign in
                     .row
                     div
-                        label.form-label.mt-4(for='exampleInputEmail1') Email address
-                        input#exampleInputEmail1.form-control(type='input' aria-describedby='Username' placeholder='Enter Username')
+                        label.form-label.mt-4(for='InputEmail1') Email address
+                        input#InputEmail1.form-control(type='input' aria-describedby='Username' name='username' placeholder='Enter Username')
                     div
-                        label.form-label.mt-4(for='exampleInputPassword1') Password
-                        input#exampleInputPassword1.form-control(type='password' placeholder='Password' autocomplete='off')
+                        label.form-label.mt-4(for='InputPassword1') Password
+                        input#InputPassword1.form-control(type='password' placeholder='Password' name='password' autocomplete='off')
                     .d-flex.justify-content-center
                         button.btn.btn-primary(type='submit') Sign Up  
