modified:   angularGameReview/angular.json

--- a/app_server/views/MainPage.pug
+++ b/app_server/views/MainPage.pug
@@ -3,3 +3,7 @@ block content
   .row.banner
     .col-12
       h1=pageHeader.title
+  app-home-list 
+  block scripts
+    script(src='/build/browser/main-DXRYTTHF.js')
+    script(src='/build/browser/main.d766bf2ac5807721.js')
