--- a/app_server/views/MainPage.pug
+++ b/app_server/views/MainPage.pug
@@ -4,6 +4,6 @@ block content
     .col-12
       h1=pageHeader.title
   app-home-list 
-  block scripts
+  block scripts 
+    script(src='/build/browser/polyfills-FFHMD2TL.js')
     script(src='/build/browser/main-DXRYTTHF.js')
-    script(src='/build/browser/main.d766bf2ac5807721.js')
