--- a/app_server/views/MainPage.pug
+++ b/app_server/views/MainPage.pug
@@ -3,7 +3,6 @@ block content
   .row.banner
     .col-12
       h1=pageHeader.title
-  app-home-list 
-  block scripts 
-    script(src='/build/browser/polyfills-FFHMD2TL.js')
-    script(src='/build/browser/main-DXRYTTHF.js')
+    app-home-list Loading...
+  script(src='/build/browser/polyfills-FFHMD2TL.js')
+  script(src='/build/browser/main-DXRYTTHF.js')
