--- a/app_server/views/MainPage.pug
+++ b/app_server/views/MainPage.pug
@@ -1,8 +1,9 @@
-extend Head
+extends Head
 block content
   .row.banner
     .col-12
       h1=pageHeader.title
-    app-home-list Loading...
-  script(src='/build/browser/polyfills-YYYYNGBP.js')
-  script(src='/build/browser/main-FFHMD2TL.js')
+      app-home-list Loading...
+block scripts  
+  script(src='build/browser/polyfills-R3PGTOTY.js')
+  script(src='build/browser/main-CIMKAV6F.js')
